# CosineCloud-Anonybot

./: Anonychat_bot.5.2.py  Anonychatdb_5.0v.db  OpenAI.py  db1.txt  db_manager.2.py  main.py  nick_names.py  nohup.out  parameter1.0v.db  pyproject.toml  replit.nix  testing001.py
info_files/: Anonychat_reg_logs.txt  Anonychatdb01.2.csv  about.txt  chat_recorder.txt  contactus.txt  help.txt  notice.txt  privacystatement.txt
info_files/AI_chatlogs/: 584429967_logs.txt
