[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
better-profanity = "^0.7.0"
numpy = "^1.26.3"
psutil = "^5.9.7"
requests = "^2.31.0"
tabulate = "^0.9.0"
qrcode = "^7.4.2"
telebot = "^0.0.5"
pyzbar = "^0.1.9"
pandas = "^2.1.4"
mimesis = "^12.1.0"
openai = "^1.7.0"
flask = "^3.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"